examples/test/testpolicy19139.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19139
  namespace: namespace334
spec:
  podSelector:
    matchLabels:
      key40: value36
      key8: value42
      key3: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value3
          key7: value9
      podSelector:
        matchLabels:
          key22: value37
          key7: value22
